# Q_learning-student

./: .gitignore  README copy.md  README.md  monitor_performance.py  pyproject.toml  run.py  test.py  test_connectivity.py  train.py
docs/: CHANGELOG_v2.md  Phase1-2_基础架构与拥塞感知路径.md  Phase1-5_完成总结.md  Phase3_规则调度队列管理系统.md  requirement.md  requirement2.md  学生移动修复与路径分析总结.md  拥塞管理实现报告.md  校园地图设计v2.md  桥梁拥塞功能实现总结.md  桥梁重构总结.md  紧急修复总结_路径视觉化与图连接性.md  网格化布局优化总结.md  行动计划.md  行动计划2.md  路径成本分析.md
src/: main.py
src/campus/: __init__.py  data.py  graph.py  gui.py  queue_manager.py  release_controller.py  schedule.py  simulation.py  student.py
src/campus_simulation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tests/: __init__.py  test_bridge_congestion.py  test_congestion_stress.py  test_data.py  test_graph.py  test_schedule_student.py  test_simulation.py
